make all Points L2Points