@@ -1,42 +1,39 @@
 package dog.giraffe;
 
-import dog.giraffe.Context;
-import dog.giraffe.Distance;
-import dog.giraffe.VectorMean;
+import dog.giraffe.points.Mean;
 import dog.giraffe.points.Points;
+import dog.giraffe.points.Vector;
 import dog.giraffe.threads.AsyncSupplier;
 import dog.giraffe.threads.Continuation;
 import dog.giraffe.threads.Continuations;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 @FunctionalInterface
-public interface InitialCenters<D extends Distance<T>, M extends VectorMean<M, T>, S extends VectorStdDeviation<S, T>, P extends Points<D, M, S, P, T>, T> {
+public interface InitialCenters<P extends Points<P>> {
     void initialCenters(
             int clusters, Context context, int maxIterations, P points, List<P> points2,
-            Continuation<List<T>> continuation) throws Throwable;
+            Continuation<List<Vector>> continuation) throws Throwable;
 
-    static <D extends Distance<T>, M extends VectorMean<M, T>, S extends VectorStdDeviation<S, T>, P extends Points<D, M, S, P, T>, T>
-    InitialCenters<D, M, S, P, T> meanAndFarthest(boolean notNear) {
-        ReplaceEmptyCluster<D, M, S, P, T> replaceEmptyClustersFirst
+    static <P extends Points<P>> InitialCenters<P> meanAndFarthest(boolean notNear) {
+        ReplaceEmptyCluster<P> replaceEmptyClustersFirst
                 =(centers, context, maxIterations, points, points2, continuation)->{
-                    List<AsyncSupplier<M>> forks=new ArrayList<>(points2.size());
+                    List<AsyncSupplier<Mean>> forks=new ArrayList<>(points2.size());
                     for (int pp=0; points2.size()>pp; ++pp) {
                         int expected=((0==pp)?points:(points2.get(pp))).size();
                         P points3=points2.get(pp);
                         forks.add((continuation2)->{
-                            M mean=points3.mean().create(expected, context.sum());
+                            Mean mean=points3.mean().create(expected, context.sum());
                             points3.addAllTo(mean);
                             continuation2.completed(mean);
                         });
                     }
-                    Continuation<List<M>> join=Continuations.map(
+                    Continuation<List<Mean>> join=Continuations.map(
                             (means, continuation2)->{
                                 means=new ArrayList<>(means);
-                                M mean=means.get(0);
+                                Mean mean=means.get(0);
                                 for (int ii=means.size()-1; 0<ii; --ii) {
                                     means.remove(ii).addTo(mean);
                                 }
@@ -45,8 +42,8 @@ public interface InitialCenters<D extends Distance<T>, M extends VectorMean<M, T
                             continuation);
                     Continuations.forkJoin(forks, join, context.executor());
                 };
-        ReplaceEmptyCluster<D, M, S, P, T> replaceEmptyClustersRest=ReplaceEmptyCluster.farthest(notNear);
-        return (clusters, context, maxIterations, points, points2, continuation)->{
+        ReplaceEmptyCluster<P> replaceEmptyClustersRest=ReplaceEmptyCluster.farthest(notNear);
+        return (clusters, context, maxIterations, points, points2, continuation)->
             newCenters(
                     new HashSet<>(0),
                     clusters,
@@ -57,17 +54,15 @@ public interface InitialCenters<D extends Distance<T>, M extends VectorMean<M, T
                     points2,
                     replaceEmptyClustersFirst,
                     replaceEmptyClustersRest);
-        };
     }
 
-    static <D extends Distance<T>, M extends VectorMean<M, T>, S extends VectorStdDeviation<S, T>, P extends Points<D, M, S, P, T>, T>
-    void newCenters(
-            Set<T> centers, int clusters, Context context, Continuation<List<T>> continuation, int maxIterations,
-            P points, List<P> points2, ReplaceEmptyCluster<D, M, S, P, T> replaceEmptyClusterFirst,
-            ReplaceEmptyCluster<D, M, S, P, T> replaceEmptyClusterRest) throws Throwable {
-        List<T> centers2=Collections.unmodifiableList(new ArrayList<>(centers));
+    static <P extends Points<P>> void newCenters(
+            Set<Vector> centers, int clusters, Context context, Continuation<List<Vector>> continuation,
+            int maxIterations, P points, List<P> points2, ReplaceEmptyCluster<P> replaceEmptyClusterFirst,
+            ReplaceEmptyCluster<P> replaceEmptyClusterRest) throws Throwable {
+        List<Vector> centers2=List.copyOf(centers);
         if (centers2.size()>=clusters) {
-                continuation.completed(centers2);
+            continuation.completed(centers2);
             return;
         }
         replaceEmptyClusterFirst.newCenter(
@@ -79,7 +74,7 @@ public interface InitialCenters<D extends Distance<T>, M extends VectorMean<M, T
                 Continuations.async(
                         Continuations.map(
                                 (center, continuation2)->{
-                                    Set<T> centers3=new HashSet<>(clusters);
+                                    Set<Vector> centers3=new HashSet<>(clusters);
                                     centers3.addAll(centers);
                                     if (centers3.add(center)) {
                                         newCenters(
@@ -94,10 +89,9 @@ public interface InitialCenters<D extends Distance<T>, M extends VectorMean<M, T
                         context.executor()));
     }
 
-    static <D extends Distance<T>, M extends VectorMean<M, T>, S extends VectorStdDeviation<S, T>, P extends Points<D, M, S, P, T>, T>
-    InitialCenters<D, M, S, P, T> random() {
+    static <P extends Points<P>> InitialCenters<P> random() {
         return (clusters, context, maxIterations, points, points2, continuation)->{
-            Set<T> centers=new HashSet<>(clusters);
+            Set<Vector> centers=new HashSet<>(clusters);
             for (int ii=maxIterations*clusters; clusters>centers.size(); --ii) {
                 if (0>=ii) {
                     continuation.failed(new CannotSelectInitialCentersException());
@@ -105,7 +99,7 @@ public interface InitialCenters<D extends Distance<T>, M extends VectorMean<M, T
                 }
                 centers.add(points.get(context.random().nextInt(points.size())));
             }
-            continuation.completed(Collections.unmodifiableList(new ArrayList<>(centers)));
+            continuation.completed(List.copyOf(centers));
         };
     }
 }
